# token.pcash-smart-contract

./: CMakeLists.txt  README.md  build.sh
scripts/: build_preprod_release.sh  create-gitlab-release.sh  run_units.sh
token.pc/: CMakeLists.txt  token.pc.cpp  token.pc.hpp
token.pc/include/: resourses.hpp
token.pc/tables/: account.hpp  deposit.hpp  income.hpp  inheritance.hpp  pool.hpp  reverse.hpp  royalty_holder.cpp  royalty_holder.hpp  stat.hpp
